--- a/research.html
+++ b/research.html
@@ -184,7 +184,7 @@
     <article class="card">
       <h2>Tools &amp; Technologies</h2>
       <ul>
-        <li><strong>Python</strong> (NumPy, Pandas, scikit-learn)</li>
+        <li>Python (NumPy, Pandas, scikit-learn)</li>
         <li>Machine learning and AI frameworks: TensorFlow, PyTorch</li>
         <li>GIS and spatial tools: ArcGIS, QGIS</li>
         <li>Hydrologic and hydraulic models: SWMM, HEC-HMS, HEC-RAS</li>
@@ -204,7 +204,7 @@
     <article class="card">
       <h2>Keywords</h2>
       <p class="keywords">
-        <strong>Urban Flood Modeling</strong> · Stormwater Resilience · Machine Learning in Water Systems ·
+        Urban Flood Modeling · Stormwater Resilience · Machine Learning in Water Systems ·
         Green Infrastructure Analytics · Hydrologic Simulation · Geospatial Data · Uncertainty Analysis · Decision Support
       </p>
     </article>
